<resources>
    <string name="app_name">PocketLawyer</string>
    <string name="stt_username">539b5b54-ed9e-4b69-b230-5e9d87168c19</string>
    <string name="stt_password">eR3ZouirbNdT</string>
    <string name="tts_username">f47ff4a4-6cab-4996-9902-f9fa987f0ba3</string>
    <string name="tts_password">1rLOXX3geKel</string>
    <string name="next_button">Next</string>
    <string name="record_button">Record</string>
    <string name="scenario1">Scenario1</string>
    <string name="scenario2">Scenario2</string>
    <string name="scenario3">Scenario3</string>
    <string name="canWeHelp">What can we help you with?</string>
    <string name="done_button">Done</string>
    <string name="nowRecording">We are now recording,\nPress next for help</string>
    <string name="testing">Testing</string>
    <string name="scenario3_text">This is scenario three</string>
    <string name="scenario2_text">This is scenario 2</string>
    <string name="scenario1_text">This is scenario one.</string>
    <string name="nav_menu_description">Navigation Menu</string>
    <string name="scenario4">Scenario4</string>
</resources>
