<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center_horizontal"
        android:background="@color/dark_grey"
        android:onClick="onClick"
        android:src="@drawable/ic_pause" />

    <TextView
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pauseButton"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/canWeHelp"
        android:textColor="@color/light_grey"
        android:textSize="35sp" />

    <pl.droidsonroids.gif.GifTextView
        android:id="@+id/wavegif2"
        android:layout_width="match_parent"
        android:layout_height="2in"
        android:layout_marginTop="15dp"
        android:layout_below="@id/help"
        android:background="@drawable/wave4"
        />


    <Button
        android:id="@+id/scenario1"
        android:layout_below="@+id/help"
        android:text="@string/scenario1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingRight="15dp"
        android:paddingLeft="45dp"
        android:onClick="onClick"
        android:gravity="center"
        android:background="@drawable/quote"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/scenario2"
        android:layout_below="@+id/scenario1"
        android:text="@string/scenario2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingRight="15dp"
        android:paddingLeft="45dp"
        android:onClick="onClick"
        android:gravity="center"
        android:background="@drawable/quote"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/scenario3"
        android:layout_below="@+id/scenario2"
        android:text="@string/scenario3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingRight="15dp"
        android:paddingLeft="45dp"
        android:onClick="onClick"
        android:gravity="center"
        android:background="@drawable/quote"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/done"
        android:background="@color/black"
        android:textColor="@color/off_white"
        android:layout_width="1in"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scenario3"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:onClick="onClick"
        android:text="@string/done_button"
        android:textAllCaps="false"
        android:textSize="20sp" />


</RelativeLayout>